<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>oopcorenlp_corpus</artifactId>
	<packaging>jar</packaging>
	<name>OOP Corpus</name>
	<description>Build corpora for OOP Core NLP analysis and indexing</description>

	<parent>
		<groupId>io.outofprintmagazine</groupId>
		<artifactId>oopcorenlp_parent</artifactId>
		<version>1.0</version>
	</parent>
	
	<properties>
		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<h2.version>1.4.200</h2.version>
		<java.version>1.8</java.version>
		<jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>io.outofprintmagazine</groupId>
			<artifactId>oopcorenlp</artifactId>
			<version>${oopcorenlp.version}</version>
			<scope>test</scope>
		</dependency>
				
<!-- 		<dependency> -->
<!-- 			<groupId>com.amazonaws</groupId> -->
<!-- 			<artifactId>aws-java-sdk</artifactId> -->
<!-- 			<version>${aws-java-sdk.version}</version> -->
<!-- 		</dependency> -->
		
		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
		<dependency>
		    <groupId>com.amazonaws</groupId>
		    <artifactId>aws-java-sdk-s3</artifactId>
		    <version>${aws-java-sdk.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-polly -->
		<dependency>
		    <groupId>com.amazonaws</groupId>
		    <artifactId>aws-java-sdk-polly</artifactId>
		    <version>${aws-java-sdk.version}</version>
		</dependency>
		
		
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${httpclient.version}</version>
		</dependency>
		
		<dependency>
		  <groupId>org.apache.httpcomponents</groupId>
		  <artifactId>httpclient-cache</artifactId>
		  <version>${httpclient.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>${jsoup.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons-text.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-parsers</artifactId>
			<version>${tika-parsers.version}</version>
		</dependency>
				
		<dependency>
		    <groupId>org.xerial</groupId>
		    <artifactId>sqlite-jdbc</artifactId>
		    <version>${sqlite-jdbc.version}</version>
		</dependency>		
		
		<dependency>
		    <groupId>org.apache.pdfbox</groupId>
		    <artifactId>pdfbox</artifactId>
		    <version>${pdfbox.version}</version>
		</dependency>

		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>${h2.version}</version>
		</dependency>

        <dependency>
            <groupId>org.deeplearning4j</groupId>
            <artifactId>deeplearning4j-core</artifactId>
            <version>${dl4j-master.version}</version>
        </dependency>
        
		<dependency>
		    <groupId>org.deeplearning4j</groupId>
		    <artifactId>deeplearning4j-nlp</artifactId>
		    <version>${dl4j-master.version}</version>
		</dependency>

        <dependency>
            <groupId>org.nd4j</groupId>
            <artifactId>nd4j-native</artifactId>
            <version>${dl4j-master.version}</version>
        </dependency>
		
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
<!-- 					<release>${java.release.version}</release> -->
				    <source>${java.version}</source>
				    <target>${java.version}</target>
				</configuration>
			</plugin>				
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
            		<argLine>@{argLine} -Xms8096m -Xmx10120m  --illegal-access=permit</argLine>
        		</configuration>
				<executions>
					<execution>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
            		<argLine>@{argLine} -Xms8096m -Xmx10120m  --illegal-access=permit</argLine>
        		</configuration>
				<executions>
					<execution>
						<goals>
							<goal>verify</goal>
							<goal>integration-test</goal>							
						</goals>
					</execution>
				</executions>
			</plugin>						

	      	<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
				  <excludes>
					<exclude>**/log4j2.xml</exclude>
					<exclude>**/logback.xml</exclude>
					<exclude>**/simplelogger.properties</exclude>
				  </excludes>
				</configuration>
			</plugin>
			
		</plugins>

	</build>

</project>
